# llama-index

./: compose.yaml
backend/: .gitignore  instrument.py  main.py
evaluation/: Dockerfile  main.py  pyproject.toml
